DAYTRIP-314: Fixed layout issues on trips details modal

--- a/src/scss/layouts/_modal.scss
+++ b/src/scss/layouts/_modal.scss
@@ -95,7 +95,7 @@
 }
 #booked_trip_modal {
     .mxw-60pc{
-        word-break: break-all;
+        word-break: break-word;
         display: inline-block;
         width: 180px;
         vertical-align: top;
